# click-to-mcp

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  cli-demo.js  cli.js  package.json  pyproject.toml  server.json  setup.py  test_all_mcp.py  test_mcp_server.py
.github/workflows/: ci.yml  npm-publish.yml  pages.yml
click_to_mcp/: __init__.py  __main__.py  adapter.py  cli.py  demo.py  discover.py  http_server.py  server.py  streamable_http.py
click_to_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: api_contract_guardian_mcp.py  quick_start.py
tests/: conftest.py  test_click_to_mcp.py  test_config.py  test_http_transport.py  test_list_tools.py  test_streamable_http.py
