[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "click-to-mcp"
version = "0.1.0"
description = "Auto-wrap any Click/typer CLI as an MCP (Model Context Protocol) server"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Revenue Holdings", email = "dev@revenueholdings.dev" },
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]
keywords = ["mcp", "click", "cli", "model-context-protocol", "ai"]

[project.urls]
Homepage = "https://github.com/revenueholdings/click-to-mcp"
Repository = "https://github.com/revenueholdings/click-to-mcp"

[project.scripts]
click-to-mcp-demo = "click_to_mcp.demo:cli"

[tool.setuptools.packages.find]
include = ["click_to_mcp*"]
